--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@txtony/gitboard-table",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A reusable GitHub-Projects-style table component, built with React + TypeScript, TailwindCSS, and theme support",
   "type": "module",
   "main": "./dist/index.cjs.js",
@@ -69,6 +69,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.12",
+    "vite-plugin-dts": "^4.5.4",
     "vitest": "^1.2.1"
   },
   "keywords": [
