--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "@rollup/rollup-linux-x64-gnu": "^4.53.3",
     "clsx": "^2.1.0",
+    "mermaid": "^11.12.2",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
